hphp/hack/test/typecheck/array_map1.php
<?hh

function test((function(int, string): bool) $f): void {
  array_map($f);
}
